# old-kingdom-yiso-journey-ep2-review

./: .gitignore  CLAUDE.md  Jenkinsfile  Jenkinsfile.groovy  Jenkinsfile.groovy.txt
.github/workflows/: release.yml
Assets/: packages.config
Assets/Editor/: BuildScript.cs
Client/: .gitignore
Client/Assets/: packages.config
Client/ProjectSettings/: Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
ProjectSettings/: EditorBuildSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
Protocol/: .gitignore  Protocol.sln
Protocol/CSharpLib/: Yiso.Protocol.csproj
Protocol/CppLib/: CMakeLists.txt
Protocol/Protos/: common.proto  game.proto
Protocol/Schemas/: common.proto  game_enum.proto  game_packet.proto
Protocol/Yiso.Protocol/: Yiso.Protocol.csproj
Protocol/scripts/: generate.bat  generate.ps1  generate.sh  generate_cpp.bat
Server/: .gitignore  YisoServer.sln  vcpkg.json
Server/Yiso.DummyClient/: Yiso.DummyClient.cpp  Yiso.DummyClient.vcxproj
Server/Yiso.Game/: Yiso.Game.cpp  Yiso.Game.vcxproj  Yiso.Game.vcxproj.filters
Server/Yiso.Game.Core/: Yiso.Game.Core.vcxproj  Yiso.Game.Core.vcxproj.filters
Server/Yiso.Game.Packet/: Yiso.Game.Packet.vcxproj  Yiso.Game.Packet.vcxproj.filters
Server/Yiso.Shared/: Yiso.Shared.csproj
Server/Yiso.Web/: Dockerfile  Program.cs  Yiso.Web.csproj  Yiso.Web.http  appsettings.json  http-client.env.json  http-client.private.env.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GAME_DESIGN.md  IMPLEMENTED.md  ROADMAP.md  SCRIPTING.md  SCRIPTING_GUIDE.md  SYSTEMS.md
(+3081 files in other folders)
